--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "description": "keeper app similar to google keep",
   "main": "server.js",
   "scripts": {
-    "client-install":"npm install --prefix client",
+    "client-install": "npm install --prefix client",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "client":"npm start --prefix client",
-    "server":"nodemon server.js",
-    "dev":"concurrently \"npm run server\" \"npm run client\""
+    "client": "npm start --prefix client",
+    "server": "nodemon server.js",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongoose": "^5.10.11"
