move server file to root, add Procfile

--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "server.js",
   "scripts": {
+    "heroku-postbuild": "cd client && npm install && npm run build",
     "client-install": "npm install --prefix ../client",
-    "client": "npm start --prefix ../client",
+    "client": "npm start --prefix ./client",
     "server": "nodemon server.js",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
