--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "heroku-postbuild": "cd client && npm install && npm run build",
-    "client-install": "npm install --prefix ../client",
+    "client-install": "npm install --prefix ./client",
     "client": "npm start --prefix ./client",
     "server": "nodemon server.js",
     "dev": "concurrently \"npm run server\" \"npm run client\""
