--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
+    "start": "node server.js",
     "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build",
 
     "client-install": "npm install --prefix ./client",
@@ -15,10 +16,13 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "mongoose": "^5.11.14"
+    "mongoose": "^5.11.14",
+    "dotenv": "^8.2.0"
   },
   "devDependencies": {
-    "concurrently": "^5.3.0",
-    "dotenv": "^8.2.0"
-  }
+    "concurrently": "^5.3.0"
+  },
+  "engines": {
+    "node": "14.16.1"
+}
 }
