--- a/client/package.json
+++ b/client/package.json
@@ -43,7 +43,7 @@
             "last 1 safari version"
         ]
     },
-    "proxy": "http://localhost:5000",
+    "proxy": "https://notes-keepr.herokuapp.com/",
     "devDependencies": {
         "gh-pages": "^3.1.0"
     }
