--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
   },
   "author": "vinay chowdary",
   "license": "ISC",
-  
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.11.14",
-    "dotenv": "^8.2.0"
+    "mongoose": "^5.11.14"
   },
   "devDependencies": {
     "concurrently": "^5.3.0"
   },
   "engines": {
     "node": "14.16.1"
-}
+  }
 }
