--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
+    "heroku-postbuild": "cd client && npm install && npm run build",
     "client-install": "npm install --prefix ./client",
     "client": "npm start --prefix ./client",
     "server": "nodemon server.js",
